--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon src/index.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "cli-table": "^0.3.1"
+  },
   "devDependencies": {
     "nodemon": "1.18.4"
   }
